# sirula-next-gen

./: Cargo.toml  config.toml
src/: config.rs  dirs.rs  main.rs
src/logic/: controller.rs  item.rs  item_module.rs  mod.rs
src/logic/modules/: console_module.rs  desktop_module.rs  mod.rs
src/ui/: application.rs  mod.rs
src/ui/application/: application_priv.rs  mod.rs
src/ui/application/list_model/: list_model_priv.rs  mod.rs
src/ui/main_window/: list_item.rs  list_item.ui  main_window.ui  main_window_priv.rs  mod.rs
