[package]
name = "sirula-next-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_warn"] }
xdg = "2.4.0"
toml = "0.4.2"
serde = "1.0.136"
gtk = { version = "0.14.3", features = ["v3_22"] }
gtk-layer-shell = "0.2.2"
once_cell = "1"

[profile.release]
debug = true
